[package]
name = "iced-editor"
version = "0.1.0"
edition = "2021"
authors = [
  "Héctor Ramón Jiménez <hector@hecrj.dev>",
  "Petros Giannis <souvlaki420@gmail.com>",
]
publish = false

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
  "debug",
  "tokio",
  "highlighter",
] }
tokio = { version = "1.38.1", features = ["fs"] }
rfd = "0.14.1"
